@@ -1,34 +1,36 @@
 package io.quarkus.deployment.pkg.steps;
 
 import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Map;
+import java.util.Locale;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.apache.commons.lang3.SystemUtils;
 import org.jboss.logging.Logger;
 
 import io.quarkus.bootstrap.util.IoUtils;
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
 import io.quarkus.deployment.builditem.NativeImageFeatureBuildItem;
+import io.quarkus.deployment.builditem.NativeMonitoringBuildItem;
+import io.quarkus.deployment.builditem.SuppressNonRuntimeConfigChangedWarningBuildItem;
 import io.quarkus.deployment.builditem.nativeimage.ExcludeConfigBuildItem;
 import io.quarkus.deployment.builditem.nativeimage.JPMSExportBuildItem;
+import io.quarkus.deployment.builditem.nativeimage.NativeImageAgentConfigDirectoryBuildItem;
 import io.quarkus.deployment.builditem.nativeimage.NativeImageAllowIncompleteClasspathAggregateBuildItem;
 import io.quarkus.deployment.builditem.nativeimage.NativeImageEnableModule;
 import io.quarkus.deployment.builditem.nativeimage.NativeImageSecurityProviderBuildItem;
@@ -41,6 +43,7 @@ import io.quarkus.deployment.pkg.builditem.ArtifactResultBuildItem;
 import io.quarkus.deployment.pkg.builditem.BuildSystemTargetBuildItem;
 import io.quarkus.deployment.pkg.builditem.CurateOutcomeBuildItem;
 import io.quarkus.deployment.pkg.builditem.NativeImageBuildItem;
+import io.quarkus.deployment.pkg.builditem.NativeImageRunnerBuildItem;
 import io.quarkus.deployment.pkg.builditem.NativeImageSourceJarBuildItem;
 import io.quarkus.deployment.pkg.builditem.OutputTargetBuildItem;
 import io.quarkus.deployment.pkg.builditem.ProcessInheritIODisabled;
@@ -50,7 +53,9 @@ import io.quarkus.deployment.steps.NativeImageFeatureStep;
 import io.quarkus.maven.dependency.ResolvedDependency;
 import io.quarkus.runtime.LocalesBuildTimeConfig;
 import io.quarkus.runtime.graal.DisableLoggingFeature;
-import io.quarkus.runtime.graal.ResourcesFeature;
+import io.quarkus.sbom.ApplicationComponent;
+import io.quarkus.sbom.ApplicationManifestConfig;
+import io.smallrye.common.os.OS;
 
 public class NativeImageBuildStep {
 
@@ -80,27 +85,24 @@ public class NativeImageBuildStep {
     public static final String APP_SOURCES = "app-sources";
 
     @BuildStep(onlyIf = NativeOrNativeSourcesBuild.class)
-    void addExportsToNativeImage(BuildProducer<JPMSExportBuildItem> exports) {
-        // Needed by io.quarkus.runtime.ResourceHelper.registerResources
-        exports.produce(new JPMSExportBuildItem("org.graalvm.nativeimage.builder", "com.oracle.svm.core.jdk"));
-    }
-
-    @BuildStep(onlyIf = NativeOrNativeSourcesBuild.class)
     void nativeImageFeatures(BuildProducer<NativeImageFeatureBuildItem> features) {
         features.produce(new NativeImageFeatureBuildItem(NativeImageFeatureStep.GRAAL_FEATURE));
-        features.produce(new NativeImageFeatureBuildItem(ResourcesFeature.class));
         features.produce(new NativeImageFeatureBuildItem(DisableLoggingFeature.class));
     }
 
     @BuildStep(onlyIf = NativeBuild.class)
-    ArtifactResultBuildItem result(NativeImageBuildItem image) {
+    ArtifactResultBuildItem result(NativeImageBuildItem image,
+            CurateOutcomeBuildItem curateOutcomeBuildItem) {
         NativeImageBuildItem.GraalVMVersion graalVMVersion = image.getGraalVMInfo();
-        Map<String, Object> graalVMInfoProps = new HashMap<>();
-        graalVMInfoProps.put("graalvm.version.full", graalVMVersion.getFullVersion());
-        graalVMInfoProps.put("graalvm.version.version", graalVMVersion.getVersion());
-        graalVMInfoProps.put("graalvm.version.javaVersion", "" + graalVMVersion.getJavaVersion());
-        graalVMInfoProps.put("graalvm.version.distribution", graalVMVersion.getDistribution());
-        return new ArtifactResultBuildItem(image.getPath(), PackageConfig.NATIVE, graalVMInfoProps);
+        return new ArtifactResultBuildItem(image.getPath(), "native",
+                graalVMVersion.toMap(),
+                ApplicationManifestConfig.builder()
+                        .setApplicationModel(curateOutcomeBuildItem.getApplicationModel())
+                        .setMainComponent(ApplicationComponent.builder()
+                                .setPath(image.getPath())
+                                .setDependencies(List.of(curateOutcomeBuildItem.getApplicationModel().getAppArtifact())))
+                        .setRunnerPath(image.getPath())
+                        .build());
     }
 
     @BuildStep(onlyIf = NativeSourcesBuild.class)
@@ -116,7 +118,10 @@ public class NativeImageBuildStep {
             List<NativeImageEnableModule> enableModules,
             List<JPMSExportBuildItem> jpmsExportBuildItems,
             List<NativeImageSecurityProviderBuildItem> nativeImageSecurityProviders,
-            List<NativeImageFeatureBuildItem> nativeImageFeatures) {
+            List<NativeImageFeatureBuildItem> nativeImageFeatures,
+            NativeImageRunnerBuildItem nativeImageRunner,
+            List<NativeMonitoringBuildItem> nativeMonitoringBuildItems,
+            CurateOutcomeBuildItem curateOutcomeBuildItem) {
 
         Path outputDir;
         try {
@@ -147,23 +152,37 @@ public class NativeImageBuildStep {
                 .setNativeImageName(nativeImageName)
                 .setGraalVMVersion(GraalVM.Version.CURRENT)
                 .setNativeImageFeatures(nativeImageFeatures)
+                .setContainerBuild(nativeImageRunner.isContainerBuild())
+                .setNativeMonitoringOptions(nativeMonitoringBuildItems)
                 .build();
         List<String> command = nativeImageArgs.getArgs();
-        try (FileOutputStream commandFOS = new FileOutputStream(outputDir.resolve("native-image.args").toFile())) {
-            String commandStr = String.join(" ", command);
-            commandFOS.write(commandStr.getBytes(StandardCharsets.UTF_8));
 
-            log.info("The sources for a subsequent native-image run along with the necessary arguments can be found in "
-                    + outputDir);
-        } catch (Exception e) {
+        try {
+            Files.writeString(outputDir.resolve("native-image.args"), String.join(" ", command));
+            Files.writeString(outputDir.resolve("graalvm.version"), GraalVM.Version.CURRENT.getVersionAsString());
+            if (nativeImageRunner.isContainerBuild()) {
+                Files.writeString(outputDir.resolve("native-builder.image"), nativeConfig.builderImage().getEffectiveImage());
+            }
+        } catch (IOException | RuntimeException e) {
             throw new RuntimeException("Failed to build native image sources", e);
         }
+
+        log.info("The sources for a subsequent native-image run along with the necessary arguments can be found in "
+                + outputDir);
 
         // drop the original output to avoid confusion
         IoUtils.recursiveDelete(nativeImageSourceJarBuildItem.getPath().getParent());
 
-        return new ArtifactResultBuildItem(nativeImageSourceJarBuildItem.getPath(), PackageConfig.NATIVE_SOURCES,
-                Collections.emptyMap());
+        return new ArtifactResultBuildItem(nativeImageSourceJarBuildItem.getPath(),
+                "native-sources",
+                Collections.emptyMap(),
+                ApplicationManifestConfig.builder()
+                        .setApplicationModel(curateOutcomeBuildItem.getApplicationModel())
+                        .setMainComponent(ApplicationComponent.builder()
+                                .setPath(nativeImageSourceJarBuildItem.getPath())
+                                .setResolvedDependency(curateOutcomeBuildItem.getApplicationModel().getAppArtifact()))
+                        .setRunnerPath(nativeImageSourceJarBuildItem.getPath())
+                        .build());
     }
 
     @BuildStep
@@ -182,8 +201,11 @@ public class NativeImageBuildStep {
             List<UnsupportedOSBuildItem> unsupportedOses,
             Optional<ProcessInheritIODisabled> processInheritIODisabled,
             Optional<ProcessInheritIODisabledBuildItem> processInheritIODisabledBuildItem,
-            List<NativeImageFeatureBuildItem> nativeImageFeatures) {
-        if (nativeConfig.debug.enabled) {
+            List<NativeImageFeatureBuildItem> nativeImageFeatures,
+            Optional<NativeImageAgentConfigDirectoryBuildItem> nativeImageAgentConfigDirectoryBuildItem,
+            List<NativeMonitoringBuildItem> nativeMonitoringItems,
+            NativeImageRunnerBuildItem nativeImageRunner) {
+        if (nativeConfig.debug().enabled()) {
             copyJarSourcesToLib(outputTargetBuildItem, curateOutcomeBuildItem);
             copySourcesToSourceCache(outputTargetBuildItem);
         }
@@ -191,40 +213,39 @@ public class NativeImageBuildStep {
         Path runnerJar = nativeImageSourceJarBuildItem.getPath();
         log.info("Building native image from " + runnerJar);
         Path outputDir = nativeImageSourceJarBuildItem.getPath().getParent();
-
         final String runnerJarName = runnerJar.getFileName().toString();
 
-        String noPIE = "";
+        String pie = "";
 
-        boolean isContainerBuild = nativeConfig.isContainerBuild();
-        if (!isContainerBuild && SystemUtils.IS_OS_LINUX) {
-            noPIE = detectNoPIE();
-        }
-
-        String nativeImageName = getNativeImageName(outputTargetBuildItem, packageConfig);
-        String resultingExecutableName = getResultingExecutableName(nativeImageName, isContainerBuild);
-        Path generatedExecutablePath = outputDir.resolve(resultingExecutableName);
-        Path finalExecutablePath = outputTargetBuildItem.getOutputDirectory().resolve(resultingExecutableName);
-        if (nativeConfig.reuseExisting) {
-            if (Files.exists(finalExecutablePath)) {
-                return new NativeImageBuildItem(finalExecutablePath,
-                        NativeImageBuildItem.GraalVMVersion.unknown());
+        boolean isContainerBuild = nativeImageRunner.isContainerBuild();
+        if (!isContainerBuild && OS.LINUX.isCurrent()) {
+            if (nativeConfig.pie().isPresent() && nativeConfig.pie().get()) {
+                pie = detectPIE();
+            } else {
+                pie = detectNoPIE();
             }
         }
 
-        NativeImageBuildRunner buildRunner = getNativeImageBuildRunner(nativeConfig, outputDir,
-                nativeImageName, resultingExecutableName);
-        buildRunner.setup(processInheritIODisabled.isPresent() || processInheritIODisabledBuildItem.isPresent());
-        final GraalVM.Version graalVMVersion = buildRunner.getGraalVMVersion();
-
-        if (graalVMVersion.isDetected()) {
-            checkGraalVMVersion(graalVMVersion);
-        } else {
-            log.error("Unable to get GraalVM version from the native-image binary.");
+        String nativeImageName = getNativeImageName(outputTargetBuildItem, packageConfig);
+        String resultingExecutableName = getResultingExecutableName(nativeImageName, nativeImageRunner.isContainerBuild());
+        Path generatedExecutablePath = outputDir.resolve(resultingExecutableName);
+        Path finalExecutablePath = outputTargetBuildItem.getOutputDirectory().resolve(resultingExecutableName);
+        if (nativeConfig.reuseExisting()) {
+            if (Files.exists(finalExecutablePath)) {
+                return new NativeImageBuildItem(finalExecutablePath,
+                        NativeImageBuildItem.GraalVMVersion.unknown(),
+                        true);
+            }
         }
 
+        NativeImageBuildRunner buildRunner = nativeImageRunner.getBuildRunner();
+
+        buildRunner.setup(processInheritIODisabled.isPresent() || processInheritIODisabledBuildItem.isPresent());
+        final GraalVM.Version graalVMVersion = buildRunner.getGraalVMVersion();
+        checkGraalVMVersion(graalVMVersion);
+
         try {
-            if (nativeConfig.cleanupServer) {
+            if (nativeConfig.cleanupServer()) {
                 log.warn(
                         "Your application is setting the deprecated 'quarkus.native.cleanup-server' configuration key"
                                 + " to true. Please consider removing this configuration key as it is ignored"
@@ -241,50 +262,73 @@ public class NativeImageBuildStep {
                     .setBrokenClasspath(incompleteClassPathAllowed.isAllow())
                     .setNativeImageSecurityProviders(nativeImageSecurityProviders)
                     .setJPMSExportBuildItems(jpmsExportBuildItems)
+                    .setNativeMonitoringOptions(nativeMonitoringItems)
                     .setEnableModules(enableModules)
                     .setNativeMinimalJavaVersions(nativeMinimalJavaVersions)
                     .setUnsupportedOSes(unsupportedOses)
                     .setOutputDir(outputDir)
                     .setRunnerJarName(runnerJarName)
                     .setNativeImageName(nativeImageName)
-                    .setNoPIE(noPIE)
+                    .setPIE(pie)
                     .setGraalVMVersion(graalVMVersion)
                     .setNativeImageFeatures(nativeImageFeatures)
+                    .setContainerBuild(isContainerBuild)
+                    .setNativeImageAgentConfigDirectory(nativeImageAgentConfigDirectoryBuildItem)
                     .build();
 
             List<String> nativeImageArgs = commandAndExecutable.args;
 
-            NativeImageBuildRunner.Result buildNativeResult = buildRunner.build(nativeImageArgs, nativeImageName,
+            NativeImageBuildRunner.Result buildNativeResult = buildRunner.build(nativeImageArgs,
+                    nativeImageName,
                     resultingExecutableName, outputDir,
-                    nativeConfig.debug.enabled,
+                    graalVMVersion, nativeConfig.debug().enabled(),
                     processInheritIODisabled.isPresent() || processInheritIODisabledBuildItem.isPresent());
             if (buildNativeResult.getExitCode() != 0) {
-                throw imageGenerationFailed(buildNativeResult.getExitCode(), nativeConfig.isContainerBuild());
+                throw imageGenerationFailed(buildNativeResult.getExitCode(), isContainerBuild);
             }
             IoUtils.copy(generatedExecutablePath, finalExecutablePath);
             Files.delete(generatedExecutablePath);
-            if (nativeConfig.debug.enabled) {
-                if (buildNativeResult.isObjcopyExists()) {
-                    final String symbolsName = String.format("%s.debug", nativeImageName);
-                    Path generatedSymbols = outputDir.resolve(symbolsName);
+            if (nativeConfig.debug().enabled()) {
+                final String symbolsName = String.format("%s.debug", nativeImageName);
+                Path generatedSymbols = outputDir.resolve(symbolsName);
+                if (generatedSymbols.toFile().exists()) {
                     Path finalSymbolsPath = outputTargetBuildItem.getOutputDirectory().resolve(symbolsName);
                     IoUtils.copy(generatedSymbols, finalSymbolsPath);
                     Files.delete(generatedSymbols);
                 }
             }
+
+            // See https://github.com/oracle/graal/issues/4921
+            try (DirectoryStream<Path> sharedLibs = Files.newDirectoryStream(outputDir, "*.{so,dll}")) {
+                sharedLibs.forEach(src -> {
+                    Path dst = null;
+                    try {
+                        dst = Path.of(outputTargetBuildItem.getOutputDirectory().toAbsolutePath().toString(),
+                                src.getFileName().toString());
+                        log.debugf("Copying a shared lib from %s to %s.", src, dst);
+                        Files.copy(src, dst, StandardCopyOption.REPLACE_EXISTING);
+                    } catch (IOException e) {
+                        log.errorf("Could not copy shared lib from %s to %s. Continuing. Error: %s", src, dst, e);
+                    }
+                });
+            } catch (IOException e) {
+                log.errorf("Could not list files in directory %s. Continuing. Error: %s", outputDir, e);
+            }
+
             System.setProperty("native.image.path", finalExecutablePath.toAbsolutePath().toString());
 
             return new NativeImageBuildItem(finalExecutablePath,
-                    new NativeImageBuildItem.GraalVMVersion(graalVMVersion.fullVersion,
-                            graalVMVersion.version.toString(),
-                            graalVMVersion.javaFeatureVersion,
-                            graalVMVersion.distribution.name()));
+                    new NativeImageBuildItem.GraalVMVersion(graalVMVersion.getFullVersion(),
+                            graalVMVersion.getVersionAsString(),
+                            graalVMVersion.javaVersion.feature(),
+                            graalVMVersion.getDistribution().name()),
+                    false);
         } catch (ImageGenerationFailureException e) {
             throw e;
         } catch (Exception e) {
             throw new RuntimeException("Failed to build native image", e);
         } finally {
-            if (nativeConfig.debug.enabled) {
+            if (nativeConfig.debug().enabled()) {
                 removeJarSourcesFromLib(outputTargetBuildItem);
                 IoUtils.recursiveDelete(outputDir.resolve(Paths.get(APP_SOURCES)));
             }
@@ -292,38 +336,69 @@ public class NativeImageBuildStep {
     }
 
     private String getNativeImageName(OutputTargetBuildItem outputTargetBuildItem, PackageConfig packageConfig) {
-        return outputTargetBuildItem.getBaseName() + packageConfig.getRunnerSuffix();
+        return outputTargetBuildItem.getBaseName() + packageConfig.computedRunnerSuffix();
     }
 
     private String getResultingExecutableName(String nativeImageName, boolean isContainerBuild) {
         String resultingExecutableName = nativeImageName;
-        if (SystemUtils.IS_OS_WINDOWS && !isContainerBuild) {
+        if (OS.WINDOWS.isCurrent() && !isContainerBuild) {
             //once image is generated it gets added .exe on Windows
             resultingExecutableName = resultingExecutableName + ".exe";
         }
         return resultingExecutableName;
     }
 
-    private static NativeImageBuildRunner getNativeImageBuildRunner(NativeConfig nativeConfig, Path outputDir,
-            String nativeImageName, String resultingExecutableName) {
-        if (!nativeConfig.isContainerBuild()) {
-            NativeImageBuildLocalRunner localRunner = getNativeImageBuildLocalRunner(nativeConfig, outputDir.toFile());
+    /**
+     * Resolves the runner factory. Happens quite early, *before* the build.
+     */
+    @BuildStep(onlyIf = NativeBuild.class)
+    public NativeImageRunnerBuildItem resolveNativeImageBuildRunner(NativeConfig nativeConfig) {
+        boolean isExplicitContainerBuild = nativeConfig.containerBuild()
+                .orElse(nativeConfig.containerRuntime().isPresent() || nativeConfig.remoteContainerBuild());
+        if (!isExplicitContainerBuild) {
+            NativeImageBuildLocalRunner localRunner = getNativeImageBuildLocalRunner(nativeConfig);
             if (localRunner != null) {
-                return localRunner;
+                return new NativeImageRunnerBuildItem(localRunner);
             }
             String executableName = getNativeImageExecutableName();
             String errorMessage = "Cannot find the `" + executableName
-                    + "` in the GRAALVM_HOME, JAVA_HOME and System PATH. Install it using `gu install native-image`";
-            if (!SystemUtils.IS_OS_LINUX) {
-                throw new RuntimeException(errorMessage);
+                    + "` in the GRAALVM_HOME, JAVA_HOME and System PATH.";
+            if (!OS.LINUX.isCurrent()) {
+                // Delay the error: if we're just building native sources, we may not need the build runner at all.
+                return new NativeImageRunnerBuildItem(new NativeImageBuildRunnerError(errorMessage));
             }
             log.warn(errorMessage + " Attempting to fall back to container build.");
         }
-        if (nativeConfig.remoteContainerBuild) {
-            return new NativeImageBuildRemoteContainerRunner(nativeConfig, outputDir,
-                    nativeImageName, resultingExecutableName);
+        if (nativeConfig.remoteContainerBuild()) {
+            return new NativeImageRunnerBuildItem(new NativeImageBuildRemoteContainerRunner(nativeConfig));
         }
-        return new NativeImageBuildLocalContainerRunner(nativeConfig, outputDir);
+        return new NativeImageRunnerBuildItem(new NativeImageBuildLocalContainerRunner(nativeConfig));
+    }
+
+    /**
+     * Creates a dummy runner for native-sources builds. This allows the creation of native-source jars without requiring
+     * podman/docker or a local native-image installation.
+     */
+    @BuildStep(onlyIf = NativeSourcesBuild.class)
+    public NativeImageRunnerBuildItem dummyNativeImageBuildRunner(NativeConfig nativeConfig) {
+        boolean explicitContainerBuild = nativeConfig.isExplicitContainerBuild();
+        return new NativeImageRunnerBuildItem(new NoopNativeImageBuildRunner(explicitContainerBuild));
+    }
+
+    @BuildStep
+    public void ignoreBuildPropertyChanges(BuildProducer<SuppressNonRuntimeConfigChangedWarningBuildItem> producer) {
+        // Don't produce warnings on static init for properties that are overridden through environment variables
+        // if they are clearly only relevant when building.
+        for (String propertyKey : new String[] {
+                "quarkus.native.container-build",
+                "quarkus.native.remote-container-build",
+                "quarkus.native.builder-image.image",
+                "quarkus.native.builder-image.pull",
+                "quarkus.native.container-runtime",
+                "quarkus.native.container-runtime-options"
+        }) {
+            producer.produce(new SuppressNonRuntimeConfigChangedWarningBuildItem(propertyKey));
+        }
     }
 
     private void copyJarSourcesToLib(OutputTargetBuildItem outputTargetBuildItem,
@@ -408,7 +483,7 @@ public class NativeImageBuildStep {
 
     private RuntimeException imageGenerationFailed(int exitValue, boolean isContainerBuild) {
         if (exitValue == OOM_ERROR_VALUE) {
-            if (isContainerBuild && !SystemUtils.IS_OS_LINUX) {
+            if (isContainerBuild && !OS.LINUX.isCurrent()) {
                 return new ImageGenerationFailureException("Image generation failed. Exit code was " + exitValue
                         + " which indicates an out of memory error. The most likely cause is Docker not being given enough memory. Also consider increasing the Xmx value for native image generation by setting the \""
                         + QUARKUS_XMX_PROPERTY + "\" property");
@@ -423,24 +498,31 @@ public class NativeImageBuildStep {
     }
 
     private void checkGraalVMVersion(GraalVM.Version version) {
-        log.info("Running Quarkus native-image plugin on " + version.getFullVersion());
+        log.info("Running Quarkus native-image plugin on " + version.getDistribution().name() + " "
+                + version.getVersionAsString() + " JDK " + version.javaVersion);
         if (version.isObsolete()) {
-            throw new IllegalStateException("Out of date version of GraalVM detected: " + version.getFullVersion() + "."
-                    + " Quarkus currently supports " + GraalVM.Version.CURRENT.version
-                    + ". Please upgrade GraalVM to this version.");
+            throw new IllegalStateException(
+                    "Out of date version of GraalVM or Mandrel detected: " + version.getVersionAsString() + "."
+                            + " Quarkus currently supports " + GraalVM.Version.CURRENT.getVersionAsString()
+                            + ". Please upgrade to this version.");
+        }
+        if (!version.isSupported()) {
+            log.warn("You are using an older version of GraalVM or Mandrel : " + version.getVersionAsString() + "."
+                    + " Quarkus currently supports " + GraalVM.Version.CURRENT.getVersionAsString()
+                    + ". Please upgrade to this version.");
         }
     }
 
-    private static NativeImageBuildLocalRunner getNativeImageBuildLocalRunner(NativeConfig nativeConfig, File outputDir) {
+    private static NativeImageBuildLocalRunner getNativeImageBuildLocalRunner(NativeConfig nativeConfig) {
         String executableName = getNativeImageExecutableName();
-        if (nativeConfig.graalvmHome.isPresent()) {
-            File file = Paths.get(nativeConfig.graalvmHome.get(), "bin", executableName).toFile();
+        if (nativeConfig.graalvmHome().isPresent()) {
+            File file = Paths.get(nativeConfig.graalvmHome().get(), "bin", executableName).toFile();
             if (file.exists()) {
-                return new NativeImageBuildLocalRunner(file.getAbsolutePath(), outputDir);
+                return new NativeImageBuildLocalRunner(file.getAbsolutePath());
             }
         }
 
-        File javaHome = nativeConfig.javaHome;
+        File javaHome = nativeConfig.javaHome();
         if (javaHome == null) {
             // try system property first - it will be the JAVA_HOME used by the current JVM
             String home = System.getProperty(JAVA_HOME_SYS);
@@ -458,7 +540,7 @@ public class NativeImageBuildStep {
         if (javaHome != null) {
             File file = new File(javaHome, "bin/" + executableName);
             if (file.exists()) {
-                return new NativeImageBuildLocalRunner(file.getAbsolutePath(), outputDir);
+                return new NativeImageBuildLocalRunner(file.getAbsolutePath());
             }
         }
 
@@ -471,7 +553,7 @@ public class NativeImageBuildStep {
                 if (dir.isDirectory()) {
                     File file = new File(dir, executableName);
                     if (file.exists()) {
-                        return new NativeImageBuildLocalRunner(file.getAbsolutePath(), outputDir);
+                        return new NativeImageBuildLocalRunner(file.getAbsolutePath());
                     }
                 }
             }
@@ -481,13 +563,17 @@ public class NativeImageBuildStep {
     }
 
     private static String getNativeImageExecutableName() {
-        return SystemUtils.IS_OS_WINDOWS ? "native-image.cmd" : "native-image";
+        return OS.WINDOWS.isCurrent() ? "native-image.cmd" : "native-image";
     }
 
     private static String detectNoPIE() {
         String argument = testGCCArgument("-no-pie");
 
         return argument.length() == 0 ? testGCCArgument("-nopie") : argument;
+    }
+
+    private static String detectPIE() {
+        return testGCCArgument("-pie");
     }
 
     private static String testGCCArgument(String argument) {
@@ -528,15 +614,24 @@ public class NativeImageBuildStep {
             private List<NativeMinimalJavaVersionBuildItem> nativeMinimalJavaVersions;
             private List<UnsupportedOSBuildItem> unsupportedOSes;
             private List<NativeImageFeatureBuildItem> nativeImageFeatures;
+            private List<NativeMonitoringBuildItem> nativeMonitoringItems;
             private Path outputDir;
             private String runnerJarName;
-            private String noPIE = "";
-            private GraalVM.Version graalVMVersion = GraalVM.Version.UNVERSIONED;
+            private String pie = "";
+            private GraalVM.Version graalVMVersion = null;
             private String nativeImageName;
             private boolean classpathIsBroken;
+            private boolean containerBuild;
+            private Optional<NativeImageAgentConfigDirectoryBuildItem> nativeImageAgentConfigDirectory = Optional.empty();
 
             public Builder setNativeConfig(NativeConfig nativeConfig) {
                 this.nativeConfig = nativeConfig;
+                return this;
+            }
+
+            public Builder setNativeImageAgentConfigDirectory(
+                    Optional<NativeImageAgentConfigDirectoryBuildItem> nativeImageAgentConfigDirectory) {
+                this.nativeImageAgentConfigDirectory = nativeImageAgentConfigDirectory;
                 return this;
             }
 
@@ -557,6 +652,11 @@ public class NativeImageBuildStep {
 
             public Builder setBrokenClasspath(boolean classpathIsBroken) {
                 this.classpathIsBroken = classpathIsBroken;
+                return this;
+            }
+
+            public Builder setContainerBuild(boolean containerBuild) {
+                this.containerBuild = containerBuild;
                 return this;
             }
 
@@ -608,8 +708,8 @@ public class NativeImageBuildStep {
                 return this;
             }
 
-            public Builder setNoPIE(String noPIE) {
-                this.noPIE = noPIE;
+            public Builder setPIE(String pie) {
+                this.pie = pie;
                 return this;
             }
 
@@ -623,12 +723,18 @@ public class NativeImageBuildStep {
                 return this;
             }
 
+            public Builder setNativeMonitoringOptions(List<NativeMonitoringBuildItem> options) {
+                this.nativeMonitoringItems = options;
+                return this;
+            }
+
+            @SuppressWarnings("deprecation")
             public NativeImageInvokerInfo build() {
                 List<String> nativeImageArgs = new ArrayList<>();
                 boolean enableSslNative = false;
-                boolean inlineBeforeAnalysis = nativeConfig.inlineBeforeAnalysis;
-                boolean addAllCharsets = nativeConfig.addAllCharsets;
-                boolean enableHttpsUrlHandler = nativeConfig.enableHttpsUrlHandler;
+                boolean inlineBeforeAnalysis = nativeConfig.inlineBeforeAnalysis();
+                boolean addAllCharsets = nativeConfig.addAllCharsets();
+                boolean enableHttpsUrlHandler = nativeConfig.enableHttpsUrlHandler();
                 for (NativeImageSystemPropertyBuildItem prop : nativeImageProperties) {
                     //todo: this should be specific build items
                     if (prop.getKey().equals("quarkus.ssl.native") && prop.getValue() != null) {
@@ -655,21 +761,19 @@ public class NativeImageBuildStep {
                         }
                     }
                 }
-
-                final String userLanguage = LocaleProcessor.nativeImageUserLanguage(nativeConfig, localesBuildTimeConfig);
-                if (!userLanguage.isEmpty()) {
-                    nativeImageArgs.add("-J-Duser.language=" + userLanguage);
-                }
-                final String userCountry = LocaleProcessor.nativeImageUserCountry(nativeConfig, localesBuildTimeConfig);
-                if (!userCountry.isEmpty()) {
-                    nativeImageArgs.add("-J-Duser.country=" + userCountry);
-                }
                 final String includeLocales = LocaleProcessor.nativeImageIncludeLocales(nativeConfig, localesBuildTimeConfig);
                 if (!includeLocales.isEmpty()) {
-                    nativeImageArgs.add("-H:IncludeLocales=" + includeLocales);
+                    if ("all".equals(includeLocales)) {
+                        log.warn(
+                                "Your application is setting the 'quarkus.locales' configuration key to include 'all'. " +
+                                        "All JDK locales, languages, currencies, etc. will be included, inflating the size of the executable.");
+                        addExperimentalVMOption(nativeImageArgs, "-H:+IncludeAllLocales");
+                    } else {
+                        addExperimentalVMOption(nativeImageArgs, "-H:IncludeLocales=" + includeLocales);
+                    }
                 }
 
-                nativeImageArgs.add("-J-Dfile.encoding=" + nativeConfig.fileEncoding);
+                nativeImageArgs.add("-J-Dfile.encoding=" + nativeConfig.fileEncoding());
 
                 if (enableSslNative) {
                     enableHttpsUrlHandler = true;
@@ -682,22 +786,25 @@ public class NativeImageBuildStep {
                 for (NativeImageFeatureBuildItem nativeImageFeature : nativeImageFeatures) {
                     featuresList.add(nativeImageFeature.getQualifiedName());
                 }
+                if (!nativeConfig.autoServiceLoaderRegistration()) {
+                    featuresList.add("io.quarkus.runtime.graal.SkipConsoleServiceProvidersFeature");
+                    // required by the feature
+                    nativeImageArgs.add("-J--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED");
+                }
                 nativeImageArgs.add("--features=" + String.join(",", featuresList));
 
-                if (graalVMVersion.isOlderThan(GraalVM.Version.VERSION_22_2_0)) {
+                if (nativeConfig.debug().enabled()) {
                     /*
-                     * Instruct GraalVM / Mandrel parse compiler graphs twice, once for the static analysis and once again
-                     * for the AOT compilation.
+                     * Instruct GraalVM / Mandrel to keep more accurate information about source locations when generating
+                     * debug info for debugging and monitoring tools. This parameter may break compatibility with Truffle.
+                     * Affected users should explicitly pass {@code -H:-TrackNodeSourcePosition} through
+                     * {@code quarkus.native.additional-build-args} to override it.
                      *
-                     * We do this because single parsing significantly increases memory usage at build time
-                     * see https://github.com/oracle/graal/issues/3435 and
-                     * https://github.com/graalvm/mandrel/issues/304#issuecomment-952070568 for more details.
-                     *
-                     * Note: This option must come before the invocation of
-                     * {@code handleAdditionalProperties(nativeImageArgs)} to ensure that devs and advanced users can
-                     * override it by passing -Dquarkus.native.additional-build-args=-H:+ParseOnce
+                     * See https://github.com/quarkusio/quarkus/issues/30772 for more details.
                      */
-                    nativeImageArgs.add("-H:-ParseOnce");
+                    addExperimentalVMOption(nativeImageArgs, "-H:+TrackNodeSourcePosition");
+                    /* See https://github.com/Karm/mandrel-integration-tests/issues/154 for more details. */
+                    addExperimentalVMOption(nativeImageArgs, "-H:+DebugCodeInfoUseSourceMappings");
                 }
 
                 /**
@@ -708,6 +815,7 @@ public class NativeImageBuildStep {
                  * control its actual inclusion which will depend on the usual analysis.
                  */
                 nativeImageArgs.add("-J--add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED");
+                nativeImageArgs.add("-J--add-exports=java.security.jgss/sun.security.jgss=ALL-UNNAMED");
 
                 //address https://github.com/quarkusio/quarkus-quickstarts/issues/993
                 nativeImageArgs.add("-J--add-opens=java.base/java.text=ALL-UNNAMED");
@@ -718,17 +826,23 @@ public class NativeImageBuildStep {
                 // required by camel-quarkus-xstream
                 nativeImageArgs.add("-J--add-opens=java.base/java.util=ALL-UNNAMED");
 
-                if (nativeConfig.enableReports) {
-                    nativeImageArgs.add("-H:PrintAnalysisCallTreeType=CSV");
+                if (nativeConfig.enableReports()) {
+                    addExperimentalVMOption(nativeImageArgs, "-H:PrintAnalysisCallTreeType=CSV");
                 }
 
-                // only available in GraalVM 22.3.0 and better.
-                if (graalVMVersion.compareTo(GraalVM.Version.VERSION_22_3_0) >= 0) {
-                    // For build time information
-                    nativeImageArgs.add("-H:+CollectImageBuildStatistics");
-                    nativeImageArgs.add("-H:ImageBuildStatisticsFile=" + nativeImageName + "-timing-stats.json");
-                    // For getting the build output stats as a JSON file
-                    nativeImageArgs.add("-H:BuildOutputJSONFile=" + nativeImageName + "-build-output-stats.json");
+                // For getting the build output stats as a JSON file
+                addExperimentalVMOption(nativeImageArgs,
+                        "-H:BuildOutputJSONFile=" + nativeImageName + "-build-output-stats.json");
+
+                // Generate a file with the list of built artifacts
+                addExperimentalVMOption(nativeImageArgs, "-H:+GenerateBuildArtifactsFile");
+
+                // only available in GraalVM 23.1.0+
+                if (graalVMVersion.compareTo(GraalVM.Version.VERSION_23_1_0) >= 0) {
+                    if (graalVMVersion.compareTo(GraalVM.Version.VERSION_24_0_0) < 0) {
+                        // Enabled by default in GraalVM 24.0.0.
+                        nativeImageArgs.add("--strict-image-heap");
+                    }
                 }
 
                 /*
@@ -738,13 +852,23 @@ public class NativeImageBuildStep {
                  */
                 handleAdditionalProperties(nativeImageArgs);
 
-                nativeImageArgs.add("-H:+AllowFoldMethods");
+                addExperimentalVMOption(nativeImageArgs, "-H:+AllowFoldMethods");
 
-                if (nativeConfig.headless) {
+                /*
+                 * Foreign Function and Memory API in Native Image, JDK's JEP 454
+                 * This is needed for JDK 24+ internal native calls due to AWT,
+                 * e.g. JDK-8337237 et al.
+                 *
+                 */
+                if (graalVMVersion.compareTo(GraalVM.Version.VERSION_24_2_0) >= 0) {
+                    addExperimentalVMOption(nativeImageArgs, "-H:+ForeignAPISupport");
+                }
+
+                if (nativeConfig.headless()) {
                     nativeImageArgs.add("-J-Djava.awt.headless=true");
                 }
 
-                if (nativeConfig.enableFallbackImages) {
+                if (nativeConfig.enableFallbackImages()) {
                     nativeImageArgs.add("--auto-fallback");
                 } else {
                     //Default: be strict as those fallback images aren't very useful
@@ -756,19 +880,19 @@ public class NativeImageBuildStep {
                     nativeImageArgs.add("--link-at-build-time");
                 }
 
-                if (nativeConfig.reportErrorsAtRuntime) {
+                if (nativeConfig.reportErrorsAtRuntime()) {
                     nativeImageArgs.add("--report-unsupported-elements-at-runtime");
                 }
-                if (nativeConfig.reportExceptionStackTraces) {
-                    nativeImageArgs.add("-H:+ReportExceptionStackTraces");
+                if (nativeConfig.reportExceptionStackTraces()) {
+                    addExperimentalVMOption(nativeImageArgs, "-H:+ReportExceptionStackTraces");
                 }
-                if (nativeConfig.debug.enabled) {
+                if (nativeConfig.debug().enabled()) {
                     nativeImageArgs.add("-g");
-                    nativeImageArgs.add("-H:DebugInfoSourceSearchPath=" + APP_SOURCES);
+                    addExperimentalVMOption(nativeImageArgs, "-H:DebugInfoSourceSearchPath=" + APP_SOURCES);
                 }
-                if (nativeConfig.debugBuildProcess) {
+                if (nativeConfig.debugBuildProcess()) {
                     String debugBuildProcessHost;
-                    if (nativeConfig.isContainerBuild()) {
+                    if (containerBuild) {
                         debugBuildProcessHost = "0.0.0.0";
                     } else {
                         debugBuildProcessHost = "localhost";
@@ -777,14 +901,14 @@ public class NativeImageBuildStep {
                             .add("-J-Xrunjdwp:transport=dt_socket,address=" + debugBuildProcessHost + ":"
                                     + DEBUG_BUILD_PROCESS_PORT + ",server=y,suspend=y");
                 }
-                if (nativeConfig.dumpProxies) {
+                if (nativeConfig.dumpProxies()) {
                     nativeImageArgs.add("-Dsun.misc.ProxyGenerator.saveGeneratedFiles=true");
                 }
-                if (nativeConfig.nativeImageXmx.isPresent()) {
-                    nativeImageArgs.add("-J-Xmx" + nativeConfig.nativeImageXmx.get());
+                if (nativeConfig.nativeImageXmx().isPresent()) {
+                    nativeImageArgs.add("-J-Xmx" + nativeConfig.nativeImageXmx().get());
                 }
                 List<String> protocols = new ArrayList<>(2);
-                if (nativeConfig.enableHttpUrlHandler) {
+                if (nativeConfig.enableHttpUrlHandler()) {
                     protocols.add("http");
                 }
                 if (enableHttpsUrlHandler) {
@@ -799,54 +923,84 @@ public class NativeImageBuildStep {
                     nativeImageArgs.add("--enable-url-protocols=" + String.join(",", protocols));
                 }
                 if (!inlineBeforeAnalysis) {
-                    nativeImageArgs.add("-H:-InlineBeforeAnalysis");
+                    addExperimentalVMOption(nativeImageArgs, "-H:-InlineBeforeAnalysis");
                 }
-                if (!noPIE.isEmpty()) {
-                    nativeImageArgs.add("-H:NativeLinkerOption=" + noPIE);
+                if (!pie.isEmpty()) {
+                    nativeImageArgs.add("-H:NativeLinkerOption=" + pie);
                 }
 
-                if (!nativeConfig.enableIsolates) {
-                    nativeImageArgs.add("-H:-SpawnIsolates");
+                if (!nativeConfig.enableIsolates()) {
+                    addExperimentalVMOption(nativeImageArgs, "-H:-SpawnIsolates");
                 }
-                if (!nativeConfig.enableJni) {
+                if (!nativeConfig.enableJni()) {
                     log.warn(
                             "Your application is setting the deprecated 'quarkus.native.enable-jni' configuration key to false."
                                     + " Please consider removing this configuration key as it is ignored (JNI is always enabled) and it"
                                     + " will be removed in a future Quarkus version.");
                 }
-                if (nativeConfig.enableServer) {
+                if (nativeConfig.enableServer()) {
                     log.warn(
                             "Your application is setting the deprecated 'quarkus.native.enable-server' configuration key to true."
                                     + " Please consider removing this configuration key as it is ignored"
                                     + " (The Native image build server is always disabled) and it"
                                     + " will be removed in a future Quarkus version.");
                 }
-                if (nativeConfig.enableVmInspection) {
-                    nativeImageArgs.add("-H:+AllowVMInspection");
+                if (nativeConfig.enableVmInspection()) {
+                    addExperimentalVMOption(nativeImageArgs, "-H:+AllowVMInspection");
                 }
-                if (nativeConfig.autoServiceLoaderRegistration) {
-                    nativeImageArgs.add("-H:+UseServiceLoaderFeature");
-                    //When enabling, at least print what exactly is being added:
-                    nativeImageArgs.add("-H:+TraceServiceLoaderFeature");
-                } else {
-                    nativeImageArgs.add("-H:-UseServiceLoaderFeature");
-                }
-                if (nativeConfig.fullStackTraces) {
-                    nativeImageArgs.add("-H:+StackTrace");
-                } else {
-                    nativeImageArgs.add("-H:-StackTrace");
+                if (nativeConfig.march().isPresent()) {
+                    nativeImageArgs.add("-march=" + nativeConfig.march().get());
                 }
 
-                if (nativeConfig.enableDashboardDump) {
-                    nativeImageArgs.add("-H:DashboardDump=" + outputTargetBuildItem.getBaseName() + "_dashboard.dump");
-                    nativeImageArgs.add("-H:+DashboardAll");
+                Set<NativeConfig.MonitoringOption> monitoringOptions = new LinkedHashSet<>();
+                if (!OS.WINDOWS.isCurrent() || containerBuild) {
+                    // --enable-monitoring=heapdump is not supported on Windows
+                    monitoringOptions.add(NativeConfig.MonitoringOption.HEAPDUMP);
+                }
+
+                if (nativeMonitoringItems != null && !nativeMonitoringItems.isEmpty()) {
+                    monitoringOptions.addAll(nativeMonitoringItems.stream()
+                            .map(NativeMonitoringBuildItem::getOption)
+                            .collect(Collectors.toSet()));
+                }
+
+                if (nativeConfig.monitoring().isPresent()) {
+                    monitoringOptions.addAll(nativeConfig.monitoring().get());
+                }
+                if (!monitoringOptions.isEmpty()) {
+                    nativeImageArgs.add("--enable-monitoring=" + monitoringOptions.stream()
+                            .map(o -> o.name().toLowerCase(Locale.ROOT)).collect(Collectors.joining(",")));
+                }
+
+                if (nativeConfig.autoServiceLoaderRegistration()) {
+                    addExperimentalVMOption(nativeImageArgs, "-H:+UseServiceLoaderFeature");
+                    if (graalVMVersion.compareTo(GraalVM.Version.VERSION_23_1_0) < 0) {
+                        // When enabling, at least print what exactly is being added. Only possible in <23.1.0
+                        nativeImageArgs.add("-H:+TraceServiceLoaderFeature");
+                    }
+                } else {
+                    addExperimentalVMOption(nativeImageArgs, "-H:-UseServiceLoaderFeature");
+                }
+                // This option has no effect on GraalVM 23.1+
+                if (graalVMVersion.compareTo(GraalVM.Version.VERSION_23_1_0) < 0) {
+                    if (nativeConfig.fullStackTraces()) {
+                        nativeImageArgs.add("-H:+StackTrace");
+                    } else {
+                        nativeImageArgs.add("-H:-StackTrace");
+                    }
+                }
+
+                if (nativeConfig.enableDashboardDump()) {
+                    addExperimentalVMOption(nativeImageArgs,
+                            "-H:DashboardDump=" + outputTargetBuildItem.getBaseName() + "_dashboard.dump");
+                    addExperimentalVMOption(nativeImageArgs, "-H:+DashboardAll");
                 }
 
                 if (nativeImageSecurityProviders != null && !nativeImageSecurityProviders.isEmpty()) {
                     String additionalSecurityProviders = nativeImageSecurityProviders.stream()
                             .map(p -> p.getSecurityProvider())
                             .collect(Collectors.joining(","));
-                    nativeImageArgs.add("-H:AdditionalSecurityProviders=" + additionalSecurityProviders);
+                    addExperimentalVMOption(nativeImageArgs, "-H:AdditionalSecurityProviders=" + additionalSecurityProviders);
                 }
 
                 if (jpmsExports != null) {
@@ -866,28 +1020,24 @@ public class NativeImageBuildStep {
                 }
 
                 if (nativeMinimalJavaVersions != null && !nativeMinimalJavaVersions.isEmpty()) {
-                    if (graalVMVersion.javaUpdateVersion == GraalVM.Version.UNDEFINED) {
-                        log.warnf(
-                                "Unable to parse used Java version from native-image version string `%s'. Java version checks will be skipped.",
-                                graalVMVersion.fullVersion);
-                    } else {
-                        nativeMinimalJavaVersions.stream()
-                                .filter(a -> !graalVMVersion.jdkVersionGreaterOrEqualTo(a.minFeature, a.minUpdate))
-                                .forEach(a -> log.warnf("Expected: Java %d, update %d, Actual: Java %d, update %d. %s",
-                                        a.minFeature, a.minUpdate, graalVMVersion.javaFeatureVersion,
-                                        graalVMVersion.javaUpdateVersion, a.warning));
-                    }
+                    nativeMinimalJavaVersions.stream()
+                            .filter(a -> !graalVMVersion.jdkVersionGreaterOrEqualTo(a))
+                            .forEach(a -> log.warnf("Expected: Java %s, Actual: Java %s. %s",
+                                    a.minVersion, graalVMVersion.javaVersion, a.warning));
                 }
 
                 if (unsupportedOSes != null && !unsupportedOSes.isEmpty()) {
                     final String errs = unsupportedOSes.stream()
-                            .filter(o -> o.triggerError(nativeConfig))
+                            .filter(o -> o.triggerError(containerBuild))
                             .map(o -> o.error)
                             .collect(Collectors.joining(", "));
                     if (!errs.isEmpty()) {
                         throw new UnsupportedOperationException(errs);
                     }
                 }
+
+                nativeImageAgentConfigDirectory
+                        .ifPresent(dir -> nativeImageArgs.add("-H:ConfigurationFileDirectories=" + dir.getDirectory()));
 
                 for (ExcludeConfigBuildItem excludeConfig : excludeConfigs) {
                     nativeImageArgs.add("--exclude-config");
@@ -905,11 +1055,11 @@ public class NativeImageBuildStep {
             }
 
             private void handleAdditionalProperties(List<String> command) {
-                if (nativeConfig.additionalBuildArgs.isPresent()) {
-                    List<String> strings = nativeConfig.additionalBuildArgs.get();
+                if (nativeConfig.additionalBuildArgs().isPresent()) {
+                    List<String> strings = nativeConfig.additionalBuildArgs().get();
                     for (String buildArg : strings) {
                         String trimmedBuildArg = buildArg.trim();
-                        if (trimmedBuildArg.contains(TRUST_STORE_SYSTEM_PROPERTY_MARKER) && nativeConfig.isContainerBuild()) {
+                        if (trimmedBuildArg.contains(TRUST_STORE_SYSTEM_PROPERTY_MARKER) && containerBuild) {
                             /*
                              * When the native binary is being built with a docker container, because a volume is created,
                              * we need to copy the trustStore file into the output directory (which is the root of volume)
@@ -928,13 +1078,23 @@ public class NativeImageBuildStep {
                                             + CONTAINER_BUILD_VOLUME_PATH + "/" + MOVED_TRUST_STORE_NAME);
                                 } catch (IOException e) {
                                     throw new UncheckedIOException("Unable to copy trustStore file '" + configuredTrustStorePath
-                                            + "' to volume root directory '" + outputDir.toAbsolutePath().toString() + "'", e);
+                                            + "' to volume root directory '" + outputDir.toAbsolutePath() + "'", e);
                                 }
                             }
                         } else {
                             command.add(trimmedBuildArg);
                         }
                     }
+                }
+            }
+
+            private void addExperimentalVMOption(List<String> nativeImageArgs, String option) {
+                if (graalVMVersion.compareTo(GraalVM.Version.VERSION_23_1_0) >= 0) {
+                    nativeImageArgs.add("-H:+UnlockExperimentalVMOptions");
+                }
+                nativeImageArgs.add(option);
+                if (graalVMVersion.compareTo(GraalVM.Version.VERSION_23_1_0) >= 0) {
+                    nativeImageArgs.add("-H:-UnlockExperimentalVMOptions");
                 }
             }
         }
