@@ -5,7 +5,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -23,7 +23,6 @@ import io.quarkus.bootstrap.resolver.maven.BootstrapMavenException;
 import io.quarkus.bootstrap.workspace.WorkspaceModule;
 import io.quarkus.maven.dependency.ArtifactCoords;
 import io.quarkus.maven.dependency.ArtifactKey;
-import io.quarkus.maven.dependency.GACT;
 
 /**
  *
@@ -36,8 +35,8 @@ public class LocalWorkspace implements WorkspaceModelResolver, WorkspaceReader, 
     private final WorkspaceRepository wsRepo = new WorkspaceRepository();
     private ArtifactKey lastFindVersionsKey;
     private List<String> lastFindVersions;
-    private long lastModified;
-    private int id = 1;
+    private volatile long lastModified = -1;
+    private volatile int id = -1;
 
     // value of the resolved version in case the raw version contains a property like ${revision} (see "Maven CI Friendly Versions")
     private String resolvedVersion;
@@ -47,34 +46,59 @@ public class LocalWorkspace implements WorkspaceModelResolver, WorkspaceReader, 
     private BootstrapMavenContext mvnCtx;
     private LocalProject currentProject;
 
-    protected void addProject(LocalProject project, long lastModified) {
+    protected void addProject(LocalProject project) {
         projects.put(project.getKey(), project);
-        if (lastModified > this.lastModified) {
-            this.lastModified = lastModified;
-        }
-        id = 31 * id + (int) (lastModified ^ (lastModified >>> 32));
     }
 
     public LocalProject getProject(String groupId, String artifactId) {
-        return getProject(new GACT(groupId, artifactId));
+        return getProject(ArtifactKey.ga(groupId, artifactId));
     }
 
     public LocalProject getProject(ArtifactKey key) {
         return projects.get(key);
     }
 
+    /**
+     * The latest last modified time of all the POMs in the workspace.
+     *
+     * @return the latest last modified time of all the POMs in the workspace
+     */
     public long getLastModified() {
+        if (lastModified < 0) {
+            initLastModifiedAndHash();
+        }
         return lastModified;
     }
 
+    /**
+     * This is essentially a hash code derived from each module's key.
+     *
+     * @return a hash code derived from each module's key
+     */
     public int getId() {
+        if (id < 0) {
+            initLastModifiedAndHash();
+        }
         return id;
+    }
+
+    private void initLastModifiedAndHash() {
+        long lastModified = 0;
+        final int[] hashes = new int[projects.size()];
+        int i = 0;
+        for (var project : projects.values()) {
+            lastModified = Math.max(project.getPomLastModified(), lastModified);
+            hashes[i++] = project.getKey().hashCode();
+        }
+        Arrays.sort(hashes);
+        this.id = Arrays.hashCode(hashes);
+        this.lastModified = lastModified;
     }
 
     @Override
     public Model resolveRawModel(String groupId, String artifactId, String versionConstraint)
             throws UnresolvableModelException {
-        if (findArtifact(new DefaultArtifact(groupId, artifactId, null, "pom", versionConstraint)) != null) {
+        if (findArtifact(new DefaultArtifact(groupId, artifactId, null, ArtifactCoords.TYPE_POM, versionConstraint)) != null) {
             return getProject(groupId, artifactId).getRawModel();
         }
         return null;
@@ -126,16 +150,12 @@ public class LocalWorkspace implements WorkspaceModelResolver, WorkspaceReader, 
             return path.toFile();
         }
 
-        if (!artifact.getClassifier().isEmpty()) {
-            if ("tests".equals(artifact.getClassifier())) {
-                //special classifier used for test jars
-                path = lp.getTestClassesDir();
-                if (Files.exists(path)) {
-                    return path.toFile();
-                }
+        if ("tests".equals(artifact.getClassifier())) {
+            //special classifier used for test jars
+            path = lp.getTestClassesDir();
+            if (Files.exists(path)) {
+                return path.toFile();
             }
-            // otherwise, this artifact hasn't been built yet
-            return null;
         }
 
         if (ArtifactCoords.TYPE_JAR.equals(artifact.getExtension())) {
@@ -217,7 +237,7 @@ public class LocalWorkspace implements WorkspaceModelResolver, WorkspaceReader, 
             return lastFindVersions;
         }
         if (findArtifact(artifact) == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         lastFindVersionsKey = ArtifactKey.ga(artifact.getGroupId(), artifact.getArtifactId());
         return lastFindVersions = List.of(artifact.getVersion());
