@@ -19,10 +19,13 @@ import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNa
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.ENCODED;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.FLOAT;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.FORM_PARAM;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.GET;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.HEAD;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.HEADER_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.HTTP_HEADERS;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.INSTANT;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.INTEGER;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.JAX_RS_ANNOTATIONS_FOR_FIELDS;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.LIST;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.LOCAL_DATE;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.LOCAL_DATE_TIME;
@@ -30,12 +33,14 @@ import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNa
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.LONG;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.MATRIX_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.MULTI;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.MULTI_PART_DATA_INPUT;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.MULTI_PART_FORM_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.NON_BLOCKING;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.OBJECT;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.OFFSET_DATE_TIME;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.OFFSET_TIME;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.OPTIONAL;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.OPTIONS;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.PATH;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.PATH_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.PATH_SEGMENT;
@@ -56,6 +61,7 @@ import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNa
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_FORM_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_HEADER_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_MATRIX_PARAM;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_MULTI;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_PATH_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_QUERY_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_RESPONSE;
@@ -73,6 +79,8 @@ import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNa
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.TRANSACTIONAL;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.UNI;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.URI_INFO;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.YEAR;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.YEAR_MONTH;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.ZONED_DATE_TIME;
 
 import java.lang.reflect.Modifier;
@@ -94,15 +102,17 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
 
-import javax.enterprise.inject.spi.DeploymentException;
-import javax.ws.rs.container.AsyncResponse;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.sse.SseEventSink;
+import jakarta.enterprise.inject.spi.DeploymentException;
+import jakarta.ws.rs.container.AsyncResponse;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.sse.SseEventSink;
 
 import org.jboss.jandex.AnnotationInstance;
 import org.jboss.jandex.AnnotationTarget;
+import org.jboss.jandex.AnnotationTransformation;
 import org.jboss.jandex.AnnotationValue;
 import org.jboss.jandex.ArrayType;
 import org.jboss.jandex.ClassInfo;
@@ -125,6 +135,9 @@ import org.jboss.resteasy.reactive.common.model.ResourceClass;
 import org.jboss.resteasy.reactive.common.model.ResourceMethod;
 import org.jboss.resteasy.reactive.common.processor.TargetJavaVersion.Status;
 import org.jboss.resteasy.reactive.common.processor.scanning.ApplicationScanningResult;
+import org.jboss.resteasy.reactive.common.processor.scanning.ResteasyReactiveScanner;
+import org.jboss.resteasy.reactive.common.processor.scanning.ScannedSerializer;
+import org.jboss.resteasy.reactive.common.processor.scanning.SerializerScanningResult;
 import org.jboss.resteasy.reactive.common.processor.transformation.AnnotationStore;
 import org.jboss.resteasy.reactive.common.processor.transformation.AnnotationsTransformer;
 import org.jboss.resteasy.reactive.common.util.URLUtils;
@@ -134,26 +147,18 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
 
     public static final Map<String, String> primitiveTypes;
     private static final Map<DotName, Class<?>> supportedReaderJavaTypes;
+    // spec
     // NOTE: sync with ContextProducer and ContextParamExtractor
-    private static final Set<DotName> DEFAULT_CONTEXT_TYPES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
-            // spec
-            URI_INFO,
-            HTTP_HEADERS,
-            REQUEST,
-            SECURITY_CONTEXT,
-            PROVIDERS,
-            RESOURCE_CONTEXT,
-            CONFIGURATION,
-            SSE,
+    private static final Set<DotName> DEFAULT_CONTEXT_TYPES = Set.of(URI_INFO, HTTP_HEADERS, REQUEST, SECURITY_CONTEXT,
+            PROVIDERS, RESOURCE_CONTEXT, CONFIGURATION, SSE,
             SSE_EVENT_SINK,
             // extras
             SERVER_REQUEST_CONTEXT,
             DotName.createSimple("org.jboss.resteasy.reactive.server.SimpleResourceInfo"), //TODO: fixme
-            RESOURCE_INFO)));
+            RESOURCE_INFO);
 
     protected static final Set<DotName> SUPPORT_TEMPORAL_PARAMS = Set.of(INSTANT, LOCAL_DATE, LOCAL_TIME, LOCAL_DATE_TIME,
-            OFFSET_TIME,
-            OFFSET_DATE_TIME, ZONED_DATE_TIME);
+            OFFSET_TIME, OFFSET_DATE_TIME, ZONED_DATE_TIME, YEAR, YEAR_MONTH);
 
     protected static final Logger log = Logger.getLogger(EndpointIndexer.class);
     protected static final String[] EMPTY_STRING_ARRAY = new String[] {};
@@ -225,7 +230,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
     private final BlockingDefault defaultBlocking;
     private final Map<DotName, Map<String, String>> classLevelExceptionMappers;
     private final Function<String, BeanFactory<Object>> factoryCreator;
-    private final Consumer<ResourceMethodCallbackData> resourceMethodCallback;
+    private final Consumer<ResourceMethodCallbackEntry> resourceMethodCallback;
     private final AnnotationStore annotationStore;
     protected final ApplicationScanningResult applicationScanningResult;
     private final Set<DotName> contextTypes;
@@ -234,6 +239,13 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
     private final TargetJavaVersion targetJavaVersion;
 
     private final Function<ClassInfo, Supplier<Boolean>> isDisabledCreator;
+
+    private final Predicate<Map<DotName, AnnotationInstance>> skipMethodParameter;
+    private final List<Predicate<ClassInfo>> validateEndpoint;
+    private final boolean skipNotRestParameters;
+    protected final Set<DotName> alreadyHandledRequestScopedResources;
+
+    private SerializerScanningResult serializerScanningResult;
 
     protected EndpointIndexer(Builder<T, ?, METHOD> builder) {
         this.index = builder.index;
@@ -250,13 +262,17 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         this.classLevelExceptionMappers = builder.classLevelExceptionMappers;
         this.factoryCreator = builder.factoryCreator;
         this.resourceMethodCallback = builder.resourceMethodCallback;
-        this.annotationStore = new AnnotationStore(builder.annotationsTransformers);
+        this.annotationStore = new AnnotationStore(builder.index, builder.annotationsTransformers);
         this.applicationScanningResult = builder.applicationScanningResult;
         this.contextTypes = builder.contextTypes;
         this.parameterContainerTypes = builder.parameterContainerTypes;
         this.multipartReturnTypeIndexerExtension = builder.multipartReturnTypeIndexerExtension;
         this.targetJavaVersion = builder.targetJavaVersion;
         this.isDisabledCreator = builder.isDisabledCreator;
+        this.skipMethodParameter = builder.skipMethodParameter;
+        this.skipNotRestParameters = builder.skipNotRestParameters;
+        this.validateEndpoint = builder.defaultPredicate;
+        this.alreadyHandledRequestScopedResources = builder.alreadyHandledRequestScopedResources;
     }
 
     public Optional<ResourceClass> createEndpoints(ClassInfo classInfo, boolean considerApplication) {
@@ -273,7 +289,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             clazz.setClassName(classInfo.name().toString());
             if (path != null) {
                 if (path.endsWith("/")) {
-                    path = path.substring(0, path.length() - 1);
+                    path = handleTrailingSlash(path);
                 }
                 if (!path.startsWith("/")) {
                     path = "/" + path;
@@ -281,7 +297,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 clazz.setPath(sanitizePath(path));
             }
             if (factoryCreator != null) {
-                clazz.setFactory((BeanFactory<Object>) factoryCreator.apply(classInfo.name().toString()));
+                clazz.setFactory(factoryCreator.apply(classInfo.name().toString()));
             }
             Map<String, String> classLevelExceptionMappers = this.classLevelExceptionMappers.get(classInfo.name());
             if (classLevelExceptionMappers != null) {
@@ -305,6 +321,9 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 }
             }
             if (injectableBean.isInjectionRequired()) {
+                if (path != null) { // we don't want to verify subresources
+                    verifyClassThatRequiresFieldInjection(classInfo);
+                }
                 clazz.setPerRequestResource(true);
             }
 
@@ -314,14 +333,25 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
 
             return Optional.of(clazz);
         } catch (Exception e) {
-            if (Modifier.isInterface(classInfo.flags()) || Modifier.isAbstract(classInfo.flags())) {
-                //kinda bogus, but we just ignore failed interfaces for now
-                //they can have methods that are not valid until they are actually extended by a concrete type
-                log.debug("Ignoring interface " + classInfo.name(), e);
-                return Optional.empty();
+            if (e instanceof DeploymentException) {
+                throw (DeploymentException) e;
             }
-            throw new RuntimeException(e);
+            for (Predicate<ClassInfo> predicate : validateEndpoint) {
+                if (predicate.test(classInfo)) {
+                    //kinda bogus, but we just ignore failed interfaces for now
+                    //they can have methods that are not valid until they are actually extended by a concrete type
+                    log.debug("Ignoring interface " + classInfo.name(), e);
+                } else {
+                    throw new RuntimeException(e);
+                }
+            }
+            return Optional.empty();
         }
+
+    }
+
+    protected void verifyClassThatRequiresFieldInjection(ClassInfo classInfo) {
+
     }
 
     private String sanitizePath(String path) {
@@ -417,25 +447,6 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         return ret;
     }
 
-    /**
-     * Return endpoints defined directly on classInfo.
-     *
-     * @param classInfo resource class
-     * @return classInfo endpoint method info
-     */
-    public static Collection<MethodInfo> collectClassEndpoints(ClassInfo classInfo,
-            Map<DotName, String> httpAnnotationToMethod, IndexView index, ApplicationScanningResult applicationScanningResult) {
-        Collection<FoundEndpoint> endpoints = collectEndpoints(classInfo, classInfo, new HashSet<>(), new HashSet<>(), true,
-                httpAnnotationToMethod, index, applicationScanningResult, new AnnotationStore(null));
-        Collection<MethodInfo> ret = new HashSet<>();
-        for (FoundEndpoint endpoint : endpoints) {
-            if (endpoint.classInfo.equals(classInfo)) {
-                ret.add(endpoint.methodInfo);
-            }
-        }
-        return ret;
-    }
-
     private static List<FoundEndpoint> collectEndpoints(ClassInfo currentClassInfo, ClassInfo actualEndpointInfo,
             Set<String> seenMethods, Set<String> existingClassNameBindings, boolean considerApplication,
             Map<DotName, String> httpAnnotationToMethod, IndexView index, ApplicationScanningResult applicationScanningResult,
@@ -511,6 +522,9 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         return ret;
     }
 
+    /**
+     * By default, we are not removing the trailing slash.
+     */
     protected String handleTrailingSlash(String path) {
         return path;
     }
@@ -583,18 +597,38 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             Set<String> fileFormNames = new HashSet<>();
             Type bodyParamType = null;
             TypeArgMapper typeArgMapper = new TypeArgMapper(currentMethodInfo.declaringClass(), index);
+            String errorLocation = "method %s on class %s";
+            Object[] errorLocationParameters = new Object[] { currentMethodInfo, currentMethodInfo.declaringClass() };
             for (int i = 0; i < methodParameters.length; ++i) {
                 Map<DotName, AnnotationInstance> anns = parameterAnnotations[i];
+                PARAM parameterResult = null;
                 boolean encoded = anns.containsKey(ENCODED);
                 Type paramType = currentMethodInfo.parameterType(i);
-                String errorLocation = "method " + currentMethodInfo + " on class " + currentMethodInfo.declaringClass();
 
-                PARAM parameterResult = extractParameterInfo(currentClassInfo, actualEndpointInfo, currentMethodInfo,
-                        existingConverters, additionalReaders,
-                        anns, paramType, errorLocation, false, hasRuntimeConverters, pathParameters,
-                        currentMethodInfo.parameterName(i),
-                        consumes,
-                        methodContext);
+                if (skipParameter(anns) || skipNotRestParameters(skipNotRestParameters).apply(anns)) {
+                    parameterResult = createIndexedParam()
+                            .setCurrentClassInfo(currentClassInfo)
+                            .setActualEndpointInfo(actualEndpointInfo)
+                            .setExistingConverters(existingConverters)
+                            .setAdditionalReaders(additionalReaders)
+                            .setAnns(anns)
+                            .setParamType(paramType)
+                            .setErrorLocation(errorLocation, errorLocationParameters)
+                            .setField(false)
+                            .setHasRuntimeConverters(hasRuntimeConverters)
+                            .setPathParameters(pathParameters)
+                            .setSourceName(currentMethodInfo.parameterName(i))
+                            .setType(ParameterType.SKIPPED);
+                } else {
+                    parameterResult = extractParameterInfo(currentClassInfo, actualEndpointInfo, currentMethodInfo,
+                            existingConverters, additionalReaders,
+                            anns, paramType, errorLocation, errorLocationParameters, false, hasRuntimeConverters,
+                            pathParameters,
+                            currentMethodInfo.parameterName(i),
+                            consumes,
+                            methodContext);
+                }
+
                 suspended |= parameterResult.isSuspended();
                 sse |= parameterResult.isSse();
                 String name = parameterResult.getName();
@@ -602,10 +636,14 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 ParameterType type = parameterResult.getType();
                 if (type == ParameterType.BODY) {
                     if (bodyParamType != null)
-                        throw new RuntimeException(
-                                "Resource method " + currentMethodInfo + " can only have a single body parameter: "
-                                        + currentMethodInfo.parameterName(i));
+                        throw new RuntimeException(String.format(
+                                "Resource method '%s#%s' can only have a single body parameter: '%s'",
+                                currentMethodInfo.declaringClass().name(), currentMethodInfo,
+                                currentMethodInfo.parameterName(i)));
                     bodyParamType = paramType;
+                    if (GET.equals(httpMethod) || HEAD.equals(httpMethod) || OPTIONS.equals(httpMethod)) {
+                        warnAboutMissUsedBodyParameter(httpMethod, currentMethodInfo);
+                    }
                 }
                 String elementType = parameterResult.getElementType();
                 boolean single = parameterResult.isSingle();
@@ -620,7 +658,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                         || type == ParameterType.MULTI_PART_FORM) {
                     // transform the bean param
                     formParamRequired |= handleBeanParam(actualEndpointInfo, paramType, methodParameters, i, fileFormNames);
-                } else if (type == ParameterType.FORM) {
+                } else if (type == ParameterType.FORM || type == ParameterType.MULTI_PART_DATA_INPUT) {
                     formParamRequired = true;
                 }
             }
@@ -629,9 +667,10 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 if (bodyParamType != null
                         && !bodyParamType.name().equals(ResteasyReactiveDotNames.MULTI_VALUED_MAP)
                         && !bodyParamType.name().equals(ResteasyReactiveDotNames.STRING)) {
-                    throw new RuntimeException(
-                            "'@FormParam' and '@RestForm' cannot be used in a resource method that contains a body parameter. Offending method is '"
-                                    + currentMethodInfo.declaringClass().name() + "#" + currentMethodInfo + "'");
+                    throw new RuntimeException(String.format(
+                            "'@FormParam' and '@RestForm' cannot be used in a resource method that contains a body parameter. Offending method is "
+                                    + "'%s#%s'",
+                            currentMethodInfo.declaringClass().name(), currentMethodInfo));
                 }
                 boolean validConsumes = false;
                 if (consumes != null && consumes.length > 0) {
@@ -644,9 +683,10 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                     }
                     // TODO: does it make sense to default to MediaType.MULTIPART_FORM_DATA when no consumes is set?
                     if (!validConsumes) {
-                        throw new RuntimeException(
-                                "'@FormParam' and '@RestForm' can only be used on methods annotated with '@Consumes(MediaType.MULTIPART_FORM_DATA)' '@Consumes(MediaType.APPLICATION_FORM_URLENCODED)'. Offending method is '"
-                                        + currentMethodInfo.declaringClass().name() + "#" + currentMethodInfo + "'");
+                        throw new RuntimeException(String.format(
+                                "'@FormParam' and '@RestForm' can only be used on methods annotated with '@Consumes(MediaType.MULTIPART_FORM_DATA)' '@Consumes(MediaType.APPLICATION_FORM_URLENCODED)'. Offending method is "
+                                        + "'%s#%s'",
+                                currentMethodInfo.declaringClass().name(), currentMethodInfo));
                     }
                 }
             }
@@ -656,9 +696,9 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                     : currentMethodInfo.returnType();
             if (REST_RESPONSE.equals(methodContextReturnTypeOrReturnType.name())
                     && (methodContextReturnTypeOrReturnType.kind() == Kind.CLASS)) {
-                log.warn("Method '" + currentMethodInfo.name() + " of Resource class '"
-                        + currentMethodInfo.declaringClass().name()
-                        + "' returns RestResponse but does not declare a generic type. It is strongly advised to define the generic type otherwise the behavior could be unpredictable");
+                log.warnf("Method '%s' of Resource class '%s' returns RestResponse but does not declare a generic type. "
+                        + "It is strongly advised to define the generic type otherwise the behavior could be unpredictable",
+                        currentMethodInfo, currentMethodInfo.declaringClass().name());
             }
             Type nonAsyncReturnType = getNonAsyncReturnType(methodContextReturnTypeOrReturnType);
             addWriterForType(additionalWriters, nonAsyncReturnType);
@@ -669,15 +709,16 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 streamElementType = streamElementTypeInMethod;
             }
 
-            String[] produces = extractProducesConsumesValues(getAnnotationStore().getAnnotation(currentMethodInfo, PRODUCES),
-                    basicResourceClassInfo.getProduces());
+            String[] produces = extractProducesConsumesValues(getAnnotationStore().getAnnotation(currentMethodInfo, PRODUCES));
             if (((produces == null) || (produces.length == 0)) && (streamElementType != null)) {
                 // when @RestStreamElementType is used, we automatically determine SSE as the @Produces MediaType
-                produces = applyDefaultProducesAndAddCharsets(httpMethod, nonAsyncReturnType,
-                        new String[] { MediaType.SERVER_SENT_EVENTS });
-            } else {
-                produces = applyDefaultProducesAndAddCharsets(httpMethod, nonAsyncReturnType, produces);
+                produces = new String[] { MediaType.SERVER_SENT_EVENTS };
+            } else if (produces == null || produces.length == 0) {
+                // use the @Produces annotation at class level if exists
+                produces = basicResourceClassInfo.getProduces();
             }
+
+            produces = applyDefaultProducesAndAddCharsets(httpMethod, nonAsyncReturnType, produces);
 
             boolean returnsMultipart = false;
             if (produces != null && produces.length == 1) {
@@ -691,10 +732,10 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                     if (RESPONSE.equals(nonAsyncReturnType.name())) {
                         throw new DeploymentException(
                                 String.format(
-                                        "Endpoints that produce a Multipart result cannot return '%s' - consider returning '%s' instead. Offending method is '%s'",
+                                        "Endpoints that produce a Multipart result cannot return '%s' - consider returning '%s' instead. Offending method is '%s#%s'",
                                         RESPONSE,
                                         REST_RESPONSE,
-                                        currentMethodInfo.declaringClass().name() + "#" + currentMethodInfo));
+                                        currentMethodInfo.declaringClass().name(), currentMethodInfo));
                     }
 
                     // Handle multipart form data responses
@@ -705,7 +746,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             }
             Set<String> nameBindingNames = nameBindingNames(currentMethodInfo, classNameBindings);
             boolean blocking = isBlocking(currentMethodInfo, defaultBlocking);
-            boolean runOnVirtualThread = isRunOnVirtualThread(currentMethodInfo, defaultBlocking);
+            boolean runOnVirtualThread = isRunOnVirtualThread(currentMethodInfo, blocking, defaultBlocking);
             // we want to allow "overriding" the blocking/non-blocking setting from an implementation class
             // when the class defining the annotations is an interface
             if (!actualEndpointInfo.equals(currentClassInfo) && Modifier.isInterface(currentClassInfo.flags())) {
@@ -716,15 +757,16 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                     //would be reached for a default
                     blocking = isBlocking(actualMethodInfo,
                             blocking ? BlockingDefault.BLOCKING : BlockingDefault.NON_BLOCKING);
-                    runOnVirtualThread = isRunOnVirtualThread(actualMethodInfo,
+                    runOnVirtualThread = isRunOnVirtualThread(actualMethodInfo, blocking,
                             blocking ? BlockingDefault.BLOCKING : BlockingDefault.NON_BLOCKING);
                 }
             }
 
             if (returnsMultipart && !blocking) {
                 throw new DeploymentException(
-                        "Endpoints that produce a Multipart result can only be used on blocking methods. Offending method is '"
-                                + currentMethodInfo.declaringClass().name() + "#" + currentMethodInfo + "'");
+                        String.format(
+                                "Endpoints that produce a Multipart result can only be used on blocking methods. Offending method is '%s#%s'",
+                                currentMethodInfo.declaringClass().name(), currentMethodInfo));
             }
 
             methodContext.put(METHOD_PRODUCES, produces);
@@ -739,6 +781,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                     .setRunOnVirtualThread(runOnVirtualThread)
                     .setSuspended(suspended)
                     .setSse(sse)
+                    .setEncoded(currentMethodInfo.hasDeclaredAnnotation(ENCODED))
                     .setStreamElementType(streamElementType)
                     .setFormParamRequired(formParamRequired)
                     .setFileFormNames(fileFormNames)
@@ -757,13 +800,37 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             handleAdditionalMethodProcessing((METHOD) method, currentClassInfo, currentMethodInfo, getAnnotationStore());
             if (resourceMethodCallback != null) {
                 resourceMethodCallback.accept(
-                        new ResourceMethodCallbackData(basicResourceClassInfo, actualEndpointInfo, currentMethodInfo, method));
+                        new ResourceMethodCallbackEntry(this, index, basicResourceClassInfo, actualEndpointInfo,
+                                currentMethodInfo,
+                                method));
             }
             return method;
         } catch (Exception e) {
-            throw new RuntimeException("Failed to process method '" + currentMethodInfo.declaringClass().name() + "#"
-                    + currentMethodInfo.name() + "'", e);
+            throw new RuntimeException(String.format("Failed to process method '%s#%s'",
+                    currentMethodInfo.declaringClass().name(), currentMethodInfo), e);
         }
+    }
+
+    protected void warnAboutMissUsedBodyParameter(DotName httpMethod, MethodInfo methodInfo) {
+        log.warnf("Using a body parameter with %s is strongly discouraged. Offending method is "
+                + "'%s#%s'", httpMethod, methodInfo.declaringClass().name(), methodInfo);
+    }
+
+    private Function<Map<DotName, AnnotationInstance>, Boolean> skipNotRestParameters(boolean skipAllNotMethodParameter) {
+        return new Function<Map<DotName, AnnotationInstance>, Boolean>() {
+            @Override
+            public Boolean apply(Map<DotName, AnnotationInstance> anns) {
+                if (skipAllNotMethodParameter) {
+                    return anns.size() > 0
+                            && JAX_RS_ANNOTATIONS_FOR_FIELDS.stream().noneMatch(dotName -> anns.containsKey(dotName));
+                }
+                return false;
+            }
+        };
+    }
+
+    protected boolean skipParameter(Map<DotName, AnnotationInstance> anns) {
+        return skipMethodParameter != null && skipMethodParameter.test(anns);
     }
 
     private String[] applyDefaultProducesAndAddCharsets(DotName httpMethod, Type nonAsyncReturnType, String[] produces) {
@@ -793,17 +860,9 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         return value;
     }
 
-    private boolean isRunOnVirtualThread(MethodInfo info, BlockingDefault defaultValue) {
-        boolean isRunOnVirtualThread = false;
+    private boolean isRunOnVirtualThread(MethodInfo info, boolean blocking, BlockingDefault defaultValue) {
         Map.Entry<AnnotationTarget, AnnotationInstance> runOnVirtualThreadAnnotation = getInheritableAnnotation(info,
                 RUN_ON_VIRTUAL_THREAD);
-
-        //should the Transactional annotation override the annotation @RunOnVirtualThread ?
-        //here it does : it is impossible for a transaction to run on a virtual thread
-        Map.Entry<AnnotationTarget, AnnotationInstance> transactional = getInheritableAnnotation(info, TRANSACTIONAL); //we treat this the same as blocking, as JTA is blocking, but it is lower priority
-        if (transactional != null) {
-            return false;
-        }
 
         if (runOnVirtualThreadAnnotation != null) {
             if (!JDK_SUPPORTS_VIRTUAL_THREADS) {
@@ -815,28 +874,19 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 throw new DeploymentException("Method '" + info.name() + "' of class '" + info.declaringClass().name()
                         + "' uses @RunOnVirtualThread but the target JDK version doesn't support virtual threads. Please configure your build tool to target Java 19 or above");
             }
-            isRunOnVirtualThread = true;
-        }
-
-        //BlockingDefault.BLOCKING should mean "block a platform thread" ? here it does
-        if (defaultValue == BlockingDefault.BLOCKING) {
-            return false;
+            if (!blocking) {
+                throw new DeploymentException(
+                        "Method '" + info.name() + "' of class '" + info.declaringClass().name()
+                                + "' is considered a non blocking method. @RunOnVirtualThread can only be used on " +
+                                " methods considered blocking");
+            } else {
+                return true;
+            }
         } else if (defaultValue == BlockingDefault.RUN_ON_VIRTUAL_THREAD) {
-            isRunOnVirtualThread = true;
-        } else if (defaultValue == BlockingDefault.NON_BLOCKING) {
+            return true;
+        } else {
             return false;
         }
-
-        if (isRunOnVirtualThread && !isBlocking(info, defaultValue)) {
-            throw new DeploymentException(
-                    "Method '" + info.name() + "' of class '" + info.declaringClass().name()
-                            + "' is considered a non blocking method. @RunOnVirtualThread can only be used on " +
-                            " methods considered blocking");
-        } else if (isRunOnVirtualThread) {
-            return true;
-        }
-
-        return false;
     }
 
     private boolean isBlocking(MethodInfo info, BlockingDefault defaultValue) {
@@ -870,15 +920,14 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             return false;
         }
         Map.Entry<AnnotationTarget, AnnotationInstance> transactional = getInheritableAnnotation(info, TRANSACTIONAL); //we treat this the same as blocking, as JTA is blocking, but it is lower priority
-        if (transactional != null) {
-            return true;
-        }
         if (defaultValue == BlockingDefault.BLOCKING) {
             return true;
         } else if (defaultValue == BlockingDefault.RUN_ON_VIRTUAL_THREAD) {
             return false;
         } else if (defaultValue == BlockingDefault.NON_BLOCKING) {
             return false;
+        } else if (transactional != null) {
+            return true;
         }
         return doesMethodHaveBlockingSignature(info);
     }
@@ -901,6 +950,10 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
     protected void handleAdditionalMethodProcessing(METHOD method, ClassInfo currentClassInfo, MethodInfo info,
             AnnotationStore annotationStore) {
 
+    }
+
+    public boolean additionalRegisterClassForReflectionCheck(ResourceMethodCallbackEntry entry) {
+        return false;
     }
 
     protected abstract InjectableBean scanInjectableBean(ClassInfo currentClassInfo,
@@ -964,6 +1017,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                         || COMPLETABLE_FUTURE.equals(parameterizedType.name())
                         || UNI.equals(parameterizedType.name())
                         || MULTI.equals(parameterizedType.name())
+                        || REST_MULTI.equals(parameterizedType.name())
                         || REST_RESPONSE.equals(parameterizedType.name())) {
                     return parameterizedType.arguments().get(0);
                 }
@@ -998,7 +1052,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
     }
 
     private static String methodDescriptor(MethodInfo info) {
-        return info.name() + ":" + AsmUtil.getDescriptor(info, s -> null);
+        return info.name() + ":" + info.descriptor();
     }
 
     private static boolean moreThanOne(AnnotationInstance... annotations) {
@@ -1162,8 +1216,8 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
 
     public PARAM extractParameterInfo(ClassInfo currentClassInfo, ClassInfo actualEndpointInfo,
             MethodInfo currentMethodInfo, Map<String, String> existingConverters, AdditionalReaders additionalReaders,
-            Map<DotName, AnnotationInstance> anns, Type paramType, String errorLocation, boolean field,
-            boolean hasRuntimeConverters, Set<String> pathParameters, String sourceName,
+            Map<DotName, AnnotationInstance> anns, Type paramType, String errorLocation, Object[] errorLocationParameters,
+            boolean field, boolean hasRuntimeConverters, Set<String> pathParameters, String sourceName,
             String[] declaredConsumes,
             Map<String, Object> methodContext) {
         PARAM builder = createIndexedParam()
@@ -1173,7 +1227,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 .setAdditionalReaders(additionalReaders)
                 .setAnns(anns)
                 .setParamType(paramType)
-                .setErrorLocation(errorLocation)
+                .setErrorLocation(errorLocation, errorLocationParameters)
                 .setField(field)
                 .setHasRuntimeConverters(hasRuntimeConverters)
                 .setPathParameters(pathParameters)
@@ -1218,10 +1272,12 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         } else if (queryParam != null) {
             builder.setName(queryParam.value().asString());
             builder.setType(ParameterType.QUERY);
+            builder.setSeparator(getSeparator(anns));
             convertible = true;
         } else if (restQueryParam != null) {
             builder.setName(valueOrDefault(restQueryParam.value(), sourceName));
             builder.setType(ParameterType.QUERY);
+            builder.setSeparator(getSeparator(anns));
             convertible = true;
         } else if (cookieParam != null) {
             builder.setName(cookieParam.value().asString());
@@ -1290,15 +1346,21 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             } else if (!field && pathParameters.contains(sourceName)) {
                 builder.setName(sourceName);
                 builder.setType(ParameterType.PATH);
-                builder.setErrorLocation(builder.getErrorLocation()
-                        + " (this parameter name matches the @Path parameter name, so it has been implicitly assumed to be an @PathParam and not the request body)");
+                builder.setErrorLocation(builder.getRawErrorLocation()
+                        + " (this parameter name matches the @Path parameter name, so it has been implicitly assumed to be an @PathParam and not the request body)",
+                        builder.getErrorLocationParameters());
                 convertible = true;
+            } else if (!field && paramType.name().equals(MULTI_PART_DATA_INPUT)) {
+                builder.setType(ParameterType.MULTI_PART_DATA_INPUT);
+                builder.setSingle(true);
+                return builder;
             } else {
                 //un-annotated field
                 //just ignore it
                 if (field) {
                     return builder;
                 }
+                builder.setName(sourceName);
                 builder.setType(ParameterType.BODY);
             }
         }
@@ -1313,21 +1375,24 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 builder.setSingle(false);
                 elementType = toClassName(pt.arguments().get(0), currentClassInfo, actualEndpointInfo, index);
                 if (convertible) {
-                    handleListParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+                    handleListParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType,
+                            currentMethodInfo);
                 }
             } else if (pt.name().equals(SET)) {
                 typeHandled = true;
                 builder.setSingle(false);
                 elementType = toClassName(pt.arguments().get(0), currentClassInfo, actualEndpointInfo, index);
                 if (convertible) {
-                    handleSetParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+                    handleSetParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType,
+                            currentMethodInfo);
                 }
             } else if (pt.name().equals(SORTED_SET)) {
                 typeHandled = true;
                 builder.setSingle(false);
                 elementType = toClassName(pt.arguments().get(0), currentClassInfo, actualEndpointInfo, index);
                 if (convertible) {
-                    handleSortedSetParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+                    handleSortedSetParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType,
+                            currentMethodInfo);
                 }
             } else if (pt.name().equals(OPTIONAL)) {
                 typeHandled = true;
@@ -1346,7 +1411,8 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             } else if (convertible) {
                 typeHandled = true;
                 elementType = toClassName(pt, currentClassInfo, actualEndpointInfo, index);
-                handleOtherParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+                handleOtherParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType,
+                        currentMethodInfo);
             } else if (builder.getType() != ParameterType.BEAN) {
                 // the "element" type is not of importance as in this case the signature is used at runtime to determine the proper types
                 elementType = DUMMY_ELEMENT_TYPE.toString();
@@ -1358,16 +1424,35 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             handlePathSegmentParam(builder);
             typeHandled = true;
         } else if (SUPPORT_TEMPORAL_PARAMS.contains(paramType.name())
-                && (type == ParameterType.PATH || type == ParameterType.QUERY || type == ParameterType.FORM)) {
+                && (type == ParameterType.PATH || type == ParameterType.QUERY || type == ParameterType.FORM
+                        || type == ParameterType.COOKIE || type == ParameterType.HEADER)) {
             elementType = paramType.name().toString();
             handleTemporalParam(builder, paramType.name(), anns, currentMethodInfo);
             typeHandled = true;
-        } else if (paramType.name().equals(LIST) && (type == ParameterType.QUERY)) { // RESTEasy Classic handles the non-generic List type
+        } else if (paramType.name().equals(LIST) && (type == ParameterType.QUERY
+                || type == ParameterType.HEADER)) { // RESTEasy Classic handles the non-generic List type
             elementType = String.class.getName();
             typeHandled = true;
             builder.setSingle(false);
             if (convertible) {
-                handleListParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+                handleListParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType,
+                        currentMethodInfo);
+            }
+        } else if (paramType.name().equals(SET) && type == ParameterType.HEADER) { // RESTEasy Classic handles the non-generic Set type
+            elementType = String.class.getName();
+            typeHandled = true;
+            builder.setSingle(false);
+            if (convertible) {
+                handleSetParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType,
+                        currentMethodInfo);
+            }
+        } else if (paramType.name().equals(SORTED_SET) && type == ParameterType.HEADER) { // RESTEasy Classic handles the non-generic SortedSet type
+            elementType = String.class.getName();
+            typeHandled = true;
+            builder.setSingle(false);
+            if (convertible) {
+                handleSortedSetParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType,
+                        currentMethodInfo);
             }
         } else if (paramType.kind() == Kind.ARRAY) {
             ArrayType at = paramType.asArrayType();
@@ -1377,9 +1462,10 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                     || convertible) {
                 builder.setSingle(false);
             }
-            elementType = toClassName(at.component(), currentClassInfo, actualEndpointInfo, index);
+            elementType = toClassName(at.constituent(), currentClassInfo, actualEndpointInfo, index);
             if (convertible) {
-                handleArrayParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+                handleArrayParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType,
+                        currentMethodInfo);
             }
         }
 
@@ -1389,7 +1475,8 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
 
             if (type != ParameterType.CONTEXT && type != ParameterType.BEAN && type != ParameterType.BODY
                     && type != ParameterType.ASYNC_RESPONSE && type != ParameterType.MULTI_PART_FORM) {
-                handleOtherParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+                handleOtherParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType,
+                        currentMethodInfo);
             }
             if (type == ParameterType.CONTEXT && elementType.equals(SseEventSink.class.getName())) {
                 builder.setSse(true);
@@ -1398,6 +1485,9 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         if (suspendedAnnotation != null && !elementType.equals(AsyncResponse.class.getName())) {
             throw new RuntimeException("Can only inject AsyncResponse on methods marked @Suspended");
         }
+        if (builder.isSingle() && builder.getSeparator() != null) {
+            throw new DeploymentException("Single parameters should not be marked with @Separator");
+        }
         builder.setElementType(elementType);
         return builder;
     }
@@ -1405,8 +1495,8 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
     private boolean isFormParamConvertible(Type paramType) {
         // let's not call the array converter for byte[] for multipart
         if (paramType.kind() == Kind.ARRAY
-                && paramType.asArrayType().component().kind() == Kind.PRIMITIVE
-                && paramType.asArrayType().component().asPrimitiveType().primitive() == Primitive.BYTE) {
+                && paramType.asArrayType().constituent().kind() == Kind.PRIMITIVE
+                && paramType.asArrayType().constituent().asPrimitiveType().primitive() == Primitive.BYTE) {
             return false;
         } else {
             return true;
@@ -1446,11 +1536,11 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
     }
 
     protected void handleOtherParam(Map<String, String> existingConverters, String errorLocation, boolean hasRuntimeConverters,
-            PARAM builder, String elementType) {
+            PARAM builder, String elementType, MethodInfo currentMethodInfo) {
     }
 
     protected void handleSortedSetParam(Map<String, String> existingConverters, String errorLocation,
-            boolean hasRuntimeConverters, PARAM builder, String elementType) {
+            boolean hasRuntimeConverters, PARAM builder, String elementType, MethodInfo currentMethodInfo) {
     }
 
     protected void handleOptionalParam(Map<String, String> existingConverters,
@@ -1461,15 +1551,15 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
     }
 
     protected void handleSetParam(Map<String, String> existingConverters, String errorLocation, boolean hasRuntimeConverters,
-            PARAM builder, String elementType) {
+            PARAM builder, String elementType, MethodInfo currentMethodInfo) {
     }
 
     protected void handleListParam(Map<String, String> existingConverters, String errorLocation, boolean hasRuntimeConverters,
-            PARAM builder, String elementType) {
+            PARAM builder, String elementType, MethodInfo currentMethodInfo) {
     }
 
     protected void handleArrayParam(Map<String, String> existingConverters, String errorLocation, boolean hasRuntimeConverters,
-            PARAM builder, String elementType) {
+            PARAM builder, String elementType, MethodInfo currentMethodInfo) {
     }
 
     final boolean isContextType(ClassType klass) {
@@ -1521,6 +1611,88 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         return result;
     }
 
+    protected boolean hasJson(String[] types) {
+        if (types == null) {
+            return false;
+        }
+        for (String type : types) {
+            if (isJson(type)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    protected boolean isJson(String type) {
+        if (type == null) {
+            return false;
+        }
+        return type.startsWith(MediaType.APPLICATION_JSON);
+    }
+
+    protected boolean hasJson(ResourceMethod method) {
+        return hasJson(method.getProduces()) || hasJson(method.getConsumes()) || isJson(method.getStreamElementType());
+    }
+
+    protected boolean hasNoTypesDefined(ResourceMethod method) {
+        return (method.getProduces() == null || method.getProduces().length == 0) &&
+                (method.getConsumes() == null || method.getConsumes().length == 0) &&
+                (method.getStreamElementType() == null);
+    }
+
+    protected boolean isDefaultJson(DefaultProducesHandler jsonDefaultProducersHandler,
+            DefaultProducesHandler.Context context) {
+        List<MediaType> mediaTypes = jsonDefaultProducersHandler.handle(context);
+        for (MediaType mediaType : mediaTypes) {
+            if (isJson(mediaType.toString())) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    protected SerializerScanningResult getSerializerScanningResult() {
+        if (serializerScanningResult == null) {
+            serializerScanningResult = ResteasyReactiveScanner.scanForSerializers(index, applicationScanningResult);
+        }
+        return serializerScanningResult;
+    }
+
+    protected void warnAboutMissingJsonProviderIfNeeded(ResourceMethod method, MethodInfo info,
+            DefaultProducesHandler jsonDefaultProducersHandler,
+            DefaultProducesHandler.Context context) {
+        if (hasJson(method) || (hasNoTypesDefined(method) && isDefaultJson(jsonDefaultProducersHandler, context))) {
+            if (STRING.toString().equals(method.getSimpleReturnType())) { // when returning string, we assume that the method implementation is actually handling to conversion
+                return;
+            }
+            boolean appProvidedJsonReaderExists = appProvidedJsonProviderExists(getSerializerScanningResult().getReaders());
+            boolean appProvidedJsonWriterExists = appProvidedJsonProviderExists(getSerializerScanningResult().getWriters());
+            if (!appProvidedJsonReaderExists || !appProvidedJsonWriterExists) {
+                logMissingJsonWarning(info);
+            }
+        }
+    }
+
+    private boolean appProvidedJsonProviderExists(List<ScannedSerializer> providers) {
+        boolean appProvidedJsonReaderExists = false;
+        for (ScannedSerializer provider : providers) {
+            for (String mt : provider.getMediaTypeStrings()) {
+                if (isJson(mt)) {
+                    appProvidedJsonReaderExists = true;
+                    break;
+                }
+            }
+            if (appProvidedJsonReaderExists) {
+                break;
+            }
+        }
+        return appProvidedJsonReaderExists;
+    }
+
+    protected void logMissingJsonWarning(MethodInfo info) {
+
+    }
+
     @SuppressWarnings({ "unchecked", "rawtypes" })
     public static abstract class Builder<T extends EndpointIndexer<T, ?, METHOD>, B extends Builder<T, B, METHOD>, METHOD extends ResourceMethod> {
         private Function<String, BeanFactory<Object>> factoryCreator;
@@ -1536,9 +1708,10 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         private AdditionalWriters additionalWriters;
         private boolean hasRuntimeConverters;
         private Map<DotName, Map<String, String>> classLevelExceptionMappers;
-        private Consumer<ResourceMethodCallbackData> resourceMethodCallback;
-        private Collection<AnnotationsTransformer> annotationsTransformers;
+        private Consumer<ResourceMethodCallbackEntry> resourceMethodCallback;
+        private Collection<AnnotationTransformation> annotationsTransformers;
         private ApplicationScanningResult applicationScanningResult;
+        private Set<DotName> alreadyHandledRequestScopedResources = new HashSet<>();
         private final Set<DotName> contextTypes = new HashSet<>(DEFAULT_CONTEXT_TYPES);
         private final Set<DotName> parameterContainerTypes = new HashSet<>();
         private MultipartReturnTypeIndexerExtension multipartReturnTypeIndexerExtension = new MultipartReturnTypeIndexerExtension() {
@@ -1551,6 +1724,17 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         private TargetJavaVersion targetJavaVersion = new TargetJavaVersion.Unknown();
 
         private Function<ClassInfo, Supplier<Boolean>> isDisabledCreator = null;
+
+        private Predicate<Map<DotName, AnnotationInstance>> skipMethodParameter = null;
+        private List<Predicate<ClassInfo>> defaultPredicate = Arrays.asList(new Predicate<>() {
+            @Override
+            public boolean test(ClassInfo classInfo) {
+                return Modifier.isInterface(classInfo.flags())
+                        || Modifier.isAbstract(classInfo.flags());
+            }
+        });
+
+        private boolean skipNotRestParameters = false;
 
         public B setMultipartReturnTypeIndexerExtension(MultipartReturnTypeIndexerExtension multipartReturnTypeHandler) {
             this.multipartReturnTypeIndexerExtension = multipartReturnTypeHandler;
@@ -1642,13 +1826,24 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             return (B) this;
         }
 
-        public B setResourceMethodCallback(Consumer<ResourceMethodCallbackData> resourceMethodCallback) {
+        public B setResourceMethodCallback(Consumer<ResourceMethodCallbackEntry> resourceMethodCallback) {
             this.resourceMethodCallback = resourceMethodCallback;
             return (B) this;
         }
 
+        /**
+         * @deprecated use {@link #setAnnotationTransformations(Collection)}
+         */
+        @Deprecated(forRemoval = true)
         public B setAnnotationsTransformers(Collection<AnnotationsTransformer> annotationsTransformers) {
-            this.annotationsTransformers = annotationsTransformers;
+            List<AnnotationTransformation> transformations = new ArrayList<>(annotationsTransformers.size());
+            transformations.addAll(annotationsTransformers);
+            this.annotationsTransformers = transformations;
+            return (B) this;
+        }
+
+        public B setAnnotationTransformations(Collection<AnnotationTransformation> annotationTransformations) {
+            this.annotationsTransformers = annotationTransformations;
             return (B) this;
         }
 
@@ -1665,6 +1860,30 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         public B setIsDisabledCreator(
                 Function<ClassInfo, Supplier<Boolean>> isDisabledCreator) {
             this.isDisabledCreator = isDisabledCreator;
+            return (B) this;
+        }
+
+        public B setSkipMethodParameter(
+                Predicate<Map<DotName, AnnotationInstance>> skipMethodParameter) {
+            this.skipMethodParameter = skipMethodParameter;
+            return (B) this;
+        }
+
+        public B setValidateEndpoint(List<Predicate<ClassInfo>> validateEndpoint) {
+            List<Predicate<ClassInfo>> predicates = new ArrayList<>(validateEndpoint.size() + 1);
+            predicates.addAll(validateEndpoint);
+            predicates.addAll(this.defaultPredicate);
+            this.defaultPredicate = predicates;
+            return (B) this;
+        }
+
+        public B skipNotRestParameters(boolean skipNotRestParameters) {
+            this.skipNotRestParameters = skipNotRestParameters;
+            return (B) this;
+        }
+
+        public B alreadyHandledRequestScopedResources(Set<DotName> alreadyHandledRequestScopedResources) {
+            this.alreadyHandledRequestScopedResources = alreadyHandledRequestScopedResources;
             return (B) this;
         }
 
@@ -1708,14 +1927,22 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         }
     }
 
-    public static class ResourceMethodCallbackData {
+    @SuppressWarnings("rawtypes")
+    public static class ResourceMethodCallbackEntry {
+
+        private final EndpointIndexer indexer;
+        private final IndexView index;
         private final BasicResourceClassInfo basicResourceClassInfo;
         private final ClassInfo actualEndpointInfo;
         private final MethodInfo methodInfo;
         private final ResourceMethod resourceMethod;
 
-        public ResourceMethodCallbackData(BasicResourceClassInfo basicResourceClassInfo, ClassInfo actualEndpointInfo,
+        public ResourceMethodCallbackEntry(EndpointIndexer indexer, IndexView index,
+                BasicResourceClassInfo basicResourceClassInfo,
+                ClassInfo actualEndpointInfo,
                 MethodInfo methodInfo, ResourceMethod resourceMethod) {
+            this.indexer = indexer;
+            this.index = index;
             this.basicResourceClassInfo = basicResourceClassInfo;
             this.methodInfo = methodInfo;
             this.actualEndpointInfo = actualEndpointInfo;
@@ -1736,6 +1963,10 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
 
         public ResourceMethod getResourceMethod() {
             return resourceMethod;
+        }
+
+        public boolean additionalRegisterClassForReflectionCheck() {
+            return indexer.additionalRegisterClassForReflectionCheck(this);
         }
     }
 
